[package]
name = "plonky2-bn254"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
num-bigint = "0.4.3"
num-traits = "0.2"
rand = "0.8.5"
plonky2_ecdsa = { git = "https://github.com/0xPolygonZero/plonky2-ecdsa", features = ["parallel"] }
plonky2_crypto = { git = "https://github.com/nikkolasg/plonky2-crypto" , branch = "feat/serialization" }
plonky2 = { git="https://github.com/nikkolasg/plonky2" }
num = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
itertools = "0.10.5"
anyhow = "1.0.71"
hex = "0.4.3"
bitvec = "1"
log = "0.4.20"

[patch.crates-io]
plonky2 = { git = "https://github.com/nikkolasg/plonky2" }

[patch."https://github.com/0xPolygonZero/plonky2-ecdsa"]
plonky2_ecdsa = { git = "https://github.com/nikkolasg/plonky2-ecdsa" }
#plonky2_ecdsa = { path = "../plonky2-ecdsa" }

[dev-dependencies]
env_logger = "0.11.0"
# plonky2_ecdsa = { path = "../plonky2-ecdsa" }
